@@ -2,11 +2,12 @@
 #
 # Description : Other tweaks yes/no answer
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 1.0 (19/Apr/16)
-# Compatible  : Raspberry Pi 1 & 2 (tested), ODROID-C1 (tested)
+# Version     : 1.1 (05/Sep/16)
+# Compatible  : Raspberry Pi 1,2 & 3 (tested), ODROID-C1 (tested)
 #
 # Help        · http://www.raspberrypi.org/forums/viewtopic.php?f=31&t=11642
 #             · https://extremeshok.com/1081/raspberry-pi-raspbian-tuning-optimising-optimizing-for-reduced-memory-usage/
+#             · http://www.jeffgeerling.com/blog/2016/how-overclock-microsd-card-reader-on-raspberry-pi-3
 #
 clear
 
@@ -15,7 +16,7 @@ check_board || { echo "Missing file helper.sh. I've tried to download it for you
 
 SDLess_Rpi(){
     sudo cp /etc/fstab{,.bak}
-	#sudo sh -c 'echo "proc            /proc               proc    defaults          0   0\n/dev/mmcblk0p1  /boot               vfat    ro,noatime        0   2\n/dev/mmcblk0p2  /                   ext4    defaults,noatime  0   1\nnone            /var/run        tmpfs   size=1M,noatime       0   0\nnone            /var/log        tmpfs   size=1M,noatime       0   0" > /etc/fstab'
+	sudo sh -c 'echo "proc            /proc               proc    defaults          0   0\n/dev/mmcblk0p1  /boot               vfat    ro,noatime        0   2\n/dev/mmcblk0p2  /                   ext4    defaults,noatime  0   1\nnone            /var/run        tmpfs   size=1M,noatime       0   0\nnone            /var/log        tmpfs   size=1M,noatime       0   0" > /etc/fstab'
 	sudo dphys-swapfile swapoff && sudo dphys-swapfile uninstall && sudo update-rc.d dphys-swapfile remove
 }
 
@@ -83,6 +84,8 @@ tweaks_ODROID(){
 }
 
 tweaks_RPi(){
+    sudo mount -o remount,rw /boot
+
     echo -e "\nEthernet Network Adapter."
     read -p "Disable (y/n)? " option
     case "$option" in
@@ -106,11 +109,19 @@ tweaks_RPi(){
         esac
     fi
 
-    echo -e "\nOverclock Raspberry Pi to 1 Ghz."
-    read -p "Agree (y/n)? " option
-    case "$option" in
-        y*) sudo cp /boot/config.txt{,.bak} && sudo sh -c 'echo "arm_freq=1000\nsdram_freq=500\ncore_freq=500\nover_voltage=2" >> /boot/config.txt' ;;
-    esac
+    if [ $(uname -m) == 'armv7l' ]; then
+        echo -e "\nOverclock Raspberry Pi to 1'35 Ghz (secure)."
+        read -p "Agree (y/n)? " option
+        case "$option" in
+            y*) sudo cp /boot/config.txt{,.bak} && sudo sh -c 'echo "arm_freq=1350\nsdram_freq=500\nover_voltage=4\ndisable_splash=1" >> /boot/config.txt' ;;
+        esac
+    else
+        echo -e "\nOverclock Raspberry Pi to 1 Ghz (secure)."
+        read -p "Agree (y/n)? " option
+        case "$option" in
+            y*) sudo cp /boot/config.txt{,.bak} && sudo sh -c 'echo "arm_freq=1000\nsdram_freq=500\ncore_freq=500\nover_voltage=2\ndisable_splash=1" >> /boot/config.txt' ;;
+        esac
+    fi
 
     echo -e "\nAdd pi user to sudo group and modify /etc/sudoers (SECURITY RISK!. USE AT YOUR OWN)"
     read -p "Agree (y/n)? " option
@@ -118,11 +129,12 @@ tweaks_RPi(){
         y*) sudo usermod -aG sudo pi && echo "pi ALL=(ALL:ALL) ALL" | sudo sh -c '(EDITOR="tee -a" visudo)' && sudo visudo -c ;;
     esac
 
-    echo -e "\nLess SD card writes to stop corruptions."
-    read -p "Agree (y/n)? " option
-    case "$option" in
-        y*) SDLess_Rpi ;;
-    esac
+    # Seems unstable, check & test it.
+    # echo -e "\nLess SD card writes to stop corruptions."
+    # read -p "Agree (y/n)? " option
+    # case "$option" in
+    #     y*) SDLess_Rpi ;;
+    # esac
 
     echo -e "\nDelete old SSH Keys and recreate them."
     read -p "Agree (y/n)? " option
@@ -171,14 +183,8 @@ tweaks_RPi(){
     echo -e "\nReplace mirrordirector.raspbian.org (sometimes down) with mirror.ox.ac.uk ?"
     read -p "Agree (y/n)? " option
     case "$option" in
-        y*) sed -i "s/mirrordirector.raspbian.org/#&/" /etc/apt/sources.list; sudo sed -i "1 s|^|deb http://mirror.ox.ac.uk/sites/archive.raspbian.org/archive/raspbian jessie main contrib non-free rpi\n|" /etc/apt/sources.list ;;
+        y*) sudo sed -i "/mirrordirector.raspbian.org/s/^/#/" /etc/apt/sources.list; sudo sed -i "1 s|^|deb http://mirror.ox.ac.uk/sites/archive.raspbian.org/archive/raspbian jessie main contrib non-free rpi\n|" /etc/apt/sources.list ;;
     esac
-
-    # echo -e "\nFuse: Grant permission to pi user (useful to run sshfs)."
-    # read -p "Agree (y/n)? " option
-    # case "$option" in
-    #     y*) sudo gpasswd -a pi fuse ;;
-    # esac
 }
 
 echo -e "Tweak recopilations\n===================\n"
