@@ -2,13 +2,12 @@
 #
 # Description : Remove packages
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 1.2 (7/Apr/16)
-#
-# Help:       · http://www.cnx-software.com/2012/07/31/84-mb-minimal-raspbian-armhf-image-for-raspberry-pi/
+# Version     : 1.2 (5/Sep/16)
+# Compatible  : Raspberry Pi 1,2 & 3 (tested)
 #
 clear
 
-df -h | grep 'rootfs\|Avail'
+df -h | grep 'root\|Avail'
 
 
 pkgs_ODROID(){
@@ -26,65 +25,61 @@ pkgs_RPi(){
     echo -e "\nRemove packages\n===============\n"
     read -p "I'm hungry. Can I delete minecraft-pi scratch sonic-pi nodered bluej greenfoot oracle-java8-jdk libreoffice-writer libreoffice-calc libreoffice-base libreoffice-impress libreoffice-draw libreoffice-math libreoffice (1.1 GB space will be freed)? (y/n) " option
     case "$option" in
-        y*) sudo apt-get remove -y minecraft-pi wolfram-engine scratch sonic-pi nodered bluej greenfoot oracle-java8-jdk libreoffice-writer libreoffice-calc libreoffice-base libreoffice-impress libreoffice-draw libreoffice-math libreoffice;;
+        y*) sudo apt remove -y minecraft-pi wolfram-engine scratch sonic-pi nodered bluej greenfoot oracle-java8-jdk libreoffice-writer libreoffice-calc libreoffice-base libreoffice-impress libreoffice-draw libreoffice-math libreoffice;;
     esac
 
-    read -p "Can I delete sonic-pi (53.8 MB space will be freed)? (y/n) " option
+    read -p "Can I delete sonic-pi (98.7 MB space will be freed)? (y/n) " option
     case "$option" in
-        y*) sudo apt-get remove -y sonic-pi;;
+        y*) sudo apt remove -y sonic-pi;;
     esac
 
     # Maybe another method. This is so destructive!
     read -p "Mmm!, Desktop environment (Warning, this is so destructive!)? (y/n) " option
     case "$option" in
-        y*) sudo apt-get remove -y --purge libx11-.* gnome* x11-common* xserver-common lightdm dbus-x11 desktop-base; sudo apt-get remove -y xkb-data `sudo dpkg --get-selections | grep -v "deinstall" | grep x11 | sed s/install//` ;;
+        y*) sudo apt remove -y --purge libx11-.* gnome* x11-common* xserver-common lightdm dbus-x11 desktop-base; sudo apt-get remove -y xkb-data `sudo dpkg --get-selections | grep -v "deinstall" | grep x11 | sed s/install//` ;;
     esac
 
     read -p "Remove packages for developers (OK if you're not one)? (y/n) " option
     case "$option" in
-        y*) sudo apt-get remove -y `sudo dpkg --get-selections | grep "\-dev" | sed s/install//` ;;
+        y*) sudo apt remove -y `sudo dpkg --get-selections | grep "\-dev" | sed s/install//` ;;
     esac
 
-    read -p "Remove Video Core source files for developers (OK if you're not one. Free 32.6 Mb)? (y/n) " option
+    read -p "Delete all related with wolfram engine (658 MB space will be freed)? (y/n) " option
     case "$option" in
-        y*) sudo rm -r /opt/vc/src ;;
-    esac
-
-    read -p "Delete all related with wolfram engine (463 MB space will be freed)? (y/n) " option
-    case "$option" in
-        y*) sudo apt-get remove -y wolfram-engine ;;
+        y*) sudo apt remove -y wolfram-engine ;;
     esac
 
     read -p "Remove Java(TM) SE Runtime Environment 1.8.0 & Wolfram-engine (646 MB space will be freed)? (y/n) " option
     case "$option" in
-        y*) sudo apt-get remove --purge -y oracle-java8-jdk ;;
+        y*) sudo apt remove --purge -y oracle-java8-jdk ;;
     esac
 
     read -p "I hate Python. Can I remove it? (y/n) " option
     case "$option" in
-        y*) sudo apt-get remove -y `sudo dpkg --get-selections | grep -v "deinstall" | grep python | sed s/install//` ;;
+        y*) sudo apt remove -y `sudo dpkg --get-selections | grep -v "deinstall" | grep python | sed s/install//` ;;
     esac
 
     read -p "Python games? Please, say yes! (y/n) " option
     case "$option" in
-        y*) sudo apt-get --purge -y python-pygame python3-pygame; rm -rf /home/pi/python_games ;;
+        y*) sudo apt remove --purge -y python-pygame python3-pygame; rm -rf /home/pi/python_games ;;
     esac
 
     # alsa?, wavs, ogg?
     read -p "Delete all related with sound? (audio support) (y/n) " option
     case "$option" in
-        y*) sudo apt-get remove -y `sudo dpkg --get-selections | grep -v "deinstall" | grep sound | sed s/install//` ;;
+        y*) sudo apt remove -y `sudo dpkg --get-selections | grep -v "deinstall" | grep sound | sed s/install//` ;;
     esac
 
-    read -p "Other unneeded packages:  libraspberrypi-doc, manpages. (Free 36.9 MB) (y/n) " option
+    read -p "Other unneeded packages:  libraspberrypi-doc, manpages. (Free 36.8 MB) (y/n) " option
     case "$option" in
-        y*) sudo apt-get -y remove libraspberrypi-doc manpages ;;
+        y*) sudo apt remove -y libraspberrypi-doc manpages ;;
     esac
 }
+
 pkgs_RPi
 
-sudo apt-get autoremove -y
-sudo apt-get clean
+sudo apt-get autoremove -y && sudo apt-get clean
 
-df -h | grep 'rootfs\|Avail'
+clear
+df -h | grep 'root\|Avail'
 read -p "Have a nice day and don't blame me!. Press [Enter] to continue..."
