@@ -1,3 +1,8 @@
+(05/09/16)
+==========
+
+· Fix issues and improve tweaks section. Raspberry Pi 3 ready.
+
 (17/08/16)
 ==========
 
